karl package Changelog
======================

Unreleased
----------
- LP #491991: An event's calendar category is now displayed when
  viewing the event.

- LP #491986: Constrain width of category selector on calendar setup page.

- Increase performance of jQuery selectors in calendar daily/weekly view

- Fix editing of calendar categories/layers when names have spaces

- Calendar categories and layers are now managed on the same setup page.

- Preload button images better so that they don't flickr on hover/click

- Change calendar "Add Event" button to not be an image so that it is easier
  to test and change the label if needed

- Speed up rendering of any page shown inside the community layout by
  roughly 2X.

- LP #444502: Added a sample content generation script.

- "Settings" action on calendar tool now allows the choice of a color
  along with a virtual calendar name.

- Add a new field index named "virtual" to the catalog.  The initial
  use for this index is to be able to query for catalog events
  globally for the purposes of creating a "dynamic" calendar: the
  ``virtual`` index, for catalog events, will be populated with a
  tuple: ``(calendar_path, virtual_calendar_name)``.  This tuple can
  be used in queries by the dynamic catalog machinery (which will need
  to spell out a set of tuples naming these calendars, and query the
  "virtual" catalog field index using the tuples in an OR clause along
  with, e.g. ``interfaces=(ICatalogEvent,)``.

- If a user doesn't have an associated profile, don't fail hard
  when trying to reindex the peopledir catalog.

- LP #434879 Add support for pasting into livesearch

- The RSS icon on the new calendar views is now placed on the lower
  right for consistency with the other pages.

- Removed the "View Earlier Events" and "View Later Events" from
  the list view on the new calendar.  These duplicate the functions
  of the forward/backward buttons and are not necessary.
