@@ -3,6 +3,10 @@ karl package Changelog
 
 Unreleased
 ----------
+- LP #492346: Clicking the (+) button to add a new event on the calendar
+  views now populates a default date and time on the form based on the 
+  context of where (+) was clicked.
+
 - LP #491991: An event's calendar category is now displayed when
   viewing the event.
 
